--- a/style.css
+++ b/style.css
@@ -161,10 +161,10 @@ form {
 
 .descrip-container textarea {
     width: 100%;
-    height: auto;
+    height: 5rem;
     border: 1.5px solid hsl(0, 0%, 89%);
     border-radius: 0.3rem;
-    padding: 1.6rem 0.5rem;
+    padding: 0.5rem 0.5rem;
     outline: none;
 }
 
